Closed Bug 1266105 Opened 8 years ago Closed 8 years ago

Purge caches once per slice when compacting

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

At the moment we purge caches on the runtime once per zone when compacting.  There's no point doing this more than once within the same slice.

I removed the TODO about just calling purgeRuntime() - doing that messes up the accounting of lifo alloc blocks and causes an assertion failure.
Attachment #8743301 - Flags: review?(terrence)
Comment on attachment 8743301 [details] [diff] [review]
purge-once-per-slice

Review of attachment 8743301 [details] [diff] [review]:
-----------------------------------------------------------------

Nice.
Attachment #8743301 - Flags: review?(terrence) → review+
https://hg.mozilla.org/mozilla-central/rev/a52937e70722
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: