Bug 1266105 - Only purge runtime tables once per slice when compacting r=terrence